# kata-containers

./: .gitignore  start_cli.sh  utils.mk
src/agent/src/: device.rs  (+2 more)
src/dbs-cli/: Cargo.toml  Makefile  log.txt  readme.md
src/dbs-cli/docs/: args.md
src/dbs-cli/src/: cli_instance.rs  main.rs
src/dbs-cli/src/parser/: args.rs  mod.rs
src/dbs-cli/src/utils/: error.rs  mod.rs
src/dragonball/: Cargo.toml  Makefile  README.md
src/dragonball/docs/: api.md  device.md  vcpu.md
src/dragonball/src/: address_space_manager.rs  config_manager.rs  error.rs  io_manager.rs  kvm_context.rs  lib.rs  metric.rs  resource_manager.rs  sev.rs  signal_handler.rs  test_utils.rs  vmm.rs
src/dragonball/src/api/: mod.rs
src/dragonball/src/api/v1/: boot_source.rs  instance_info.rs  machine_config.rs  mod.rs  vmm_action.rs
src/dragonball/src/dbs_acpi/src/: acpi.rs  lib.rs
src/dragonball/src/dbs_arch/: Cargo.toml
src/dragonball/src/dbs_arch/src/x86_64/: regs.rs
src/dragonball/src/dbs_device/: Cargo.toml
src/dragonball/src/dbs_device/src/: lib.rs
src/dragonball/src/dbs_interrupt/: Cargo.toml
src/dragonball/src/dbs_interrupt/src/: lib.rs  manager.rs
src/dragonball/src/dbs_interrupt/src/ioapic/: device.rs  ioapic_status.rs  mod.rs
src/dragonball/src/dbs_interrupt/src/kvm/: mod.rs  userspace_legacy_irq.rs
src/dragonball/src/dbs_pci/: Cargo.toml  README.md
src/dragonball/src/dbs_pci/src/: bus.rs  configuration.rs  device.rs  lib.rs  msi.rs  msix.rs  root_bus.rs  root_device.rs  vfio.rs
src/dragonball/src/dbs_tdx/: Cargo.toml
src/dragonball/src/dbs_tdx/src/: lib.rs
src/dragonball/src/dbs_tdx/src/td_shim/: hob.rs  metadata.rs  mod.rs
src/dragonball/src/dbs_virtio_devices/: Cargo.toml
src/dragonball/src/dbs_virtio_devices/src/: balloon.rs  lib.rs  mem.rs  net.rs
src/dragonball/src/dbs_virtio_devices/src/block/: device.rs
src/dragonball/src/dbs_virtio_devices/src/fs/: device.rs  handler.rs
src/dragonball/src/dbs_virtio_devices/src/mmio/: mmio_v2.rs
src/dragonball/src/dbs_virtio_devices/src/vsock/: device.rs
src/dragonball/src/device_manager/: balloon_dev_mgr.rs  blk_dev_mgr.rs  console_manager.rs  fs_dev_mgr.rs  ioapic_dev_mgr.rs  legacy.rs  mem_dev_mgr.rs  memory_region_handler.rs  mod.rs  virtio_net_dev_mgr.rs  vsock_dev_mgr.rs
src/dragonball/src/device_manager/vfio_dev_mgr/: mod.rs  pci_vfio.rs
src/dragonball/src/vcpu/: aarch64.rs  mod.rs  vcpu_impl.rs  vcpu_manager.rs  x86_64.rs
src/dragonball/src/vm/: kernel_config.rs  mod.rs  x86_64.rs
src/runtime-rs/: Cargo.toml  Makefile  README.md
src/runtime-rs/config/: configuration-dragonball-tdx.toml.in  configuration-dragonball.toml.in
src/runtime-rs/crates/agent/: Cargo.toml
src/runtime-rs/crates/agent/src/: lib.rs  log_forwarder.rs  trace_forwarder.rs  types.rs
src/runtime-rs/crates/agent/src/kata/: agent.rs  mod.rs  trans.rs
src/runtime-rs/crates/agent/src/sock/: hybrid_vsock.rs  mod.rs  vsock.rs
src/runtime-rs/crates/cli/kata-runtime/: Cargo.toml
src/runtime-rs/crates/cli/kata-runtime/src/: lib.rs
src/runtime-rs/crates/cli/kata-runtime/src/factory/: cmd.rs  mod.rs
src/runtime-rs/crates/cli/kata-runtime/src/manager/: mod.rs
src/runtime-rs/crates/hypervisor/: Cargo.toml  README.md
src/runtime-rs/crates/hypervisor/src/: device_manager.rs  kernel_param.rs  lib.rs  protection.rs  utils.rs
src/runtime-rs/crates/hypervisor/src/ch/: inner.rs  inner_device.rs  inner_hypervisor.rs  mod.rs
src/runtime-rs/crates/hypervisor/src/device/: blk_dev_manager.rs  block.rs  device_manager.rs  generic.rs  memory.rs  mod.rs  network.rs  share_fs_mount.rs  vfio_dev_manager.rs  vhost_dev_manager.rs
src/runtime-rs/crates/hypervisor/src/device/device_type/: block.rs  generic.rs  mod.rs  vfio.rs
src/runtime-rs/crates/hypervisor/src/device/driver/: mod.rs  vfio.rs  vhost_user.rs  virtio_blk.rs
src/runtime-rs/crates/hypervisor/src/dragonball/: inner.rs  inner_device.rs  inner_hypervisor.rs  mod.rs  vmm_instance.rs
src/runtime-rs/crates/hypervisor/src/qemu/: inner.rs  mod.rs
src/runtime-rs/crates/persist/: Cargo.toml
src/runtime-rs/crates/persist/src/: lib.rs  network.rs  sandbox.rs
src/runtime-rs/crates/resource/: Cargo.toml
src/runtime-rs/crates/resource/src/: lib.rs  manager.rs  manager_inner.rs
src/runtime-rs/crates/resource/src/cpu_mem/: cpu.rs  initial_size.rs  mem.rs
src/runtime-rs/crates/resource/src/device/: manager.rs  mod.rs
src/runtime-rs/crates/resource/src/device/device/: config.rs  mod.rs
src/runtime-rs/crates/resource/src/device/driver/: block.rs  mod.rs
src/runtime-rs/crates/resource/src/network/: dan.rs  mod.rs  network_pair.rs  network_with_netns.rs
src/runtime-rs/crates/resource/src/rootfs/: block_rootfs.rs  mod.rs  nydus_rootfs.rs  share_fs_rootfs.rs
src/runtime-rs/crates/resource/src/share_fs/: mod.rs  sandbox_bind_mounts.rs  share_virtio_fs.rs  share_virtio_fs_inline.rs  share_virtio_fs_standalone.rs  utils.rs
src/runtime-rs/crates/resource/src/vm/: mod.rs
src/runtime-rs/crates/resource/src/volume/: block_volume.rs  default_volume.rs  hugepage.rs  mod.rs  sealed_secret_volume.rs  secure_volume.rs  share_fs_volume.rs  shm_volume.rs
src/runtime-rs/crates/runtimes/: Cargo.toml
src/runtime-rs/crates/runtimes/common/: Cargo.toml
src/runtime-rs/crates/runtimes/common/src/: container_manager.rs  lib.rs  runtime_handler.rs  sandbox.rs
src/runtime-rs/crates/runtimes/linux_container/src/: lib.rs
src/runtime-rs/crates/runtimes/src/: manager.rs  tracer.rs
src/runtime-rs/crates/runtimes/src/shim_mgmt/: handlers.rs  metrics.rs  mod.rs  server.rs
src/runtime-rs/crates/runtimes/virt_container/: Cargo.toml
src/runtime-rs/crates/runtimes/virt_container/src/: health_check.rs  lib.rs  sandbox.rs
src/runtime-rs/crates/runtimes/wasm_container/src/: lib.rs
src/runtime-rs/crates/service/: Cargo.toml
src/runtime-rs/crates/service/src/: manager.rs  task_service.rs
src/runtime-rs/crates/shim/: Cargo.toml
src/runtime-rs/crates/shim/src/: panic_hook.rs  shim_delete.rs  shim_run.rs
src/runtime-rs/docs/images/: crate-overview.drawio  device_manager.drawio
(+64 files in other folders)
