[package]
name = "dbs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbs-address-space = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-allocator = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-device = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-interrupt = { git = "https://github.com/qiliangfan/dragonball-sandbox.git", features = ["kvm-irq"]  }
dbs-legacy-devices = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-upcall = { git = "https://github.com/qiliangfan/dragonball-sandbox.git", optional = true  }
dbs-utils = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-virtio-devices = { git = "https://github.com/qiliangfan/dragonball-sandbox.git", optional = true, features = ["virtio-mmio"] }
dbs-boot = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }
dbs-arch = { git = "https://github.com/qiliangfan/dragonball-sandbox.git" }

dragonball = { path = "../dragonball" }
lazy_static = "1.2"
clap = { version = "3.2.14", features = ["derive"] }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
libc = "0.2.39"
seccompiler = "0.2.0"
vmm-sys-util = "0.10.0"
log = "0.4.14"
kvm-bindings = "0.5.0"
kvm-ioctls = "0.11.0"
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
#linux-loader = "0.4.0"
linux-loader = { git = "https://github.com/QiliangFan/linux-loader" }