[package]
name = "dragonball"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
description = "A secure sandbox for Kata Containers"
keywords = ["kata-containers", "sandbox", "vmm", "dragonball"]
homepage = "https://katacontainers.io/"
repository = "https://github.com/kata-containers/kata-containers.git"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arc-swap = "1.5.0"
bytes = "1.1.0"
cfg-if = "1.0"
dbs-address-space = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-allocator = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-acpi = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-arch = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-boot = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-device = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-tdx = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-interrupt = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball", features = ["kvm-irq"] }
dbs-legacy-devices = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-upcall = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-utils = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball" }
dbs-virtio-devices = { git = "https://github.com/NK-fengsf/dragonball-sandbox.git", branch = "sev_support_for_dragonball", optional = true, features = ["virtio-mmio"] }
kvm-bindings = "0.6.0"
kvm-ioctls = "0.12.0"
lazy_static = "1.2"
libc = "0.2.39"
linux-loader = "0.6.0"
log = "0.4.14"
once_cell = "1.18"
nix = "0.24.2"
raw-cpuid = "11.0"
seccompiler = "0.2.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
sev = { version = "1.2", optional = true }
slog = "2.5.2"
slog-scope = "4.4.0"
thiserror = "1"
vmm-sys-util = "0.11.0"
virtio-queue = { version = "0.6.0", optional = true }
vm-memory = { version = "0.9.0", features = ["backend-mmap"] }

[dev-dependencies]
slog-term = "2.9.0"
slog-async = "2.7.0"
test-utils = { path = "../libs/test-utils" }

[features]
acpi = []
tdx = ["acpi", "userspace-ioapic", "dbs-arch/tdx"]
sev = ["dep:sev"]
atomic-guest-memory = [ "vm-memory/backend-atomic" ]
hotplug = ["virtio-vsock"]
virtio-vsock = ["dbs-virtio-devices/virtio-vsock", "virtio-queue"]
virtio-blk = ["dbs-virtio-devices/virtio-blk", "virtio-queue"]
virtio-net = ["dbs-virtio-devices/virtio-net", "virtio-queue"]
# virtio-fs only work on atomic-guest-memory
virtio-fs = ["dbs-virtio-devices/virtio-fs", "virtio-queue", "atomic-guest-memory"]
userspace-ioapic = ["dbs-interrupt/kvm-userspace-ioapic"]
dbs-upcall = []

[patch.crates-io]
sev = { git = "https://github.com/NK-fengsf/sev.git", branch = "sev_support_for_dragonball" }
