[workspace]
members = [
    "crates/shim",
    "crates/shim-ctl",
]

[patch.crates-io]
dbs-address-space = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-allocator = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-arch = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-boot = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-device = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-interrupt = { git = "https://github.com/openanolis/dragonball-sandbox.git", features = ["kvm-irq"] }
dbs-legacy-devices = { git = "https://github.com/openanolis/dragonball-sandbox.git" }
dbs-upcall = { git = "https://github.com/openanolis/dragonball-sandbox.git", optional = true }
dbs-utils = { git = "https://github.com/openanolis/dragonball-sandbox.git", optional = true }
dbs-virtio-devices = { git = "https://github.com/openanolis/dragonball-sandbox.git",  optional = true, features = ["virtio-mmio"] }