[package]
name = "persist"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"

[dependencies]
libc = "0.2"
anyhow = "^1.0"
rustc-serialize = "0.3.24"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
async-trait = "0.1.48"